# society_simulator

./: main.py  pyproject.toml
